mobile version - adjustments

--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
                 <h2>PROJ3D</h2>
                 <h2>Rede Feminina de Combate ao Câncer</h2>
             </div>
+
+            <div class="nav-mobile">
+                <h2 class="active">Todos</h2>
+                <h2>GTC - UEPG</h2>
+                <h2>Tecnologias no Campo</h2>
+                <h2>Lixo Eletrônico</h2>
+                <h2>Pegaí</h2>
+                <h2>PROJ3D</h2>
+                <h2>Rede Feminina de Combate ao Câncer</h2>
+            </div>
+
+            <div class="banner bannerMobile">
+                <div class="active">
+                    <h1>Prática Tecnológica Extensionista III - 2025</h1>
+                </div>
+            </div>
+
             <div class="nav-content">
                 <div class="active">
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
-                    
                     <h1>Grupo de Teatro Científico da UEPG (GTC - UEPG)</h1>
                     <div class="pdf-carousel" data-pdf="src/GTC1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -84,10 +96,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>Grupo de Teatro Científico da UEPG (GTC - UEPG)</h1>
                     <div class="pdf-carousel" data-pdf="src/GTC1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -100,10 +108,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>Tecnologias no Campo</h1>
                     <div class="pdf-carousel" data-pdf="src/TecnoCampo1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -116,10 +120,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>Lixo Eletrônico</h1>
                     <div class="pdf-carousel" data-pdf="src/LEletronico1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -132,10 +132,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>Pegaí</h1>
                     <div class="pdf-carousel" data-pdf="src/Pegai1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -148,10 +144,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>PROJ3D</h1>
                     <div class="pdf-carousel" data-pdf="src/Proj3D1.pdf" data-loaded="false">
                         <canvas></canvas>
@@ -164,10 +156,6 @@
                 </div>
 
                 <div>
-                    <div class="banner">
-                        <img src="src/banner.jpg" alt="Imagem de banner da página">                    
-                        <h1>Prática Tecnológica Extensionista III - 2025</h1>
-                    </div>
                     <h1>Rede Feminina de Combate ao Câncer</h1>
                     <p id="soon">Ainda não disponível</p>
                 </div>
