bug fixes - mobile version

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Lixo Eletrônico</h2>
                 <h2>Pegaí</h2>
                 <h2>PROJ3D</h2>
-                <h2>Rede Feminina de Combate ao Câncer</h2>
+                <h2>Rede Feminina</h2>
             </div>
 
             <div class="banner bannerMobile">
