--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Prática Tecnológica Extensionista III - 2025</title>
         <link rel="icon" href="Imagens/Icons/GTC.png" type="image/png">
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -159,6 +160,10 @@
                     <h1>Rede Feminina de Combate ao Câncer</h1>
                     <p id="soon">Ainda não disponível</p>
                 </div>
+
+                <footer>
+                    <p>Desenvolvido por Raniele Pereira</p>
+                </footer>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
